2008-11-20  Olaf Lenz  <lenzo@pckr76.mpip-mainz.mpg.de>

	* pbcwrap.tcl, pbcunwrap.tcl, pbcjoin.tcl: Added option
	"-noverbose" for completeness.

	* doc/index.html: Now contains only link to the pbctools gfroge
	home page: http://www.espresso-pp.de/projects/pbctools/ 
	
	* doc/pbctools.tex: Translated doc/index.html to LaTeX.

2008-10-27  Olaf Lenz  <olenz@true>

	* doc/index.html: History and credits will be included from the
	NEWS and AUTHORS file in the future.

	* doc/ChangeLog: Moved one directory up.

	* NEWS, README, AUTHORS: Created files with release notes, basic
	docs and credits.

2008-10-04  Olaf Lenz  <olenz@qwghlm>

	* Advanced to version 2.3.

	* pbcbox.tcl, pbcwrap.tcl: Renamed option -rectangular to
	-orthorhombic (-rectangular still works).

	* doc/index.html: Updated docs.

2008-09-04  Olaf Lenz  <lenzo@mpip-mainz.mpg.de>

	* doc/index.html: Updated history.

2008-06-14  Olaf Lenz  <olenz@qwghlm>

	* pbcjoin.tcl, doc/index.html: Replaced homemade "bonded" keyword
	and implementation by VMDs native "fragment".

2008-06-10  Olaf Lenz  <olenz@qwghlm>

	* pbcwrap.tcl, pbcjoin.tcl: Bugfix: "pbcwrap -compound segment"
	didn't work: Used wrong keyword "segment" for segment selection,
	instead of "segid". Reported by Chris Maffeo <cmaffeo2@uiuc.edu>.

2008-03-27  Olaf Lenz  <olenz@fias.uni-frankfurt.de>

	* Advanced to version 2.2.

	* pbcwrap.tcl (pbcwrap), index.html: Changed default of option
	"-compound" to "-nocompound".

	* index.html: Some doc fixes.

2007-07-30  Olaf Lenz  <olenz@fias.uni-frankfurt.de>

	* Advanced to version 2.1.

	* index.html: Added history and table of contents.

2007-06-01  Olaf Lenz  <olenz@fias.uni-frankfurt.de>
	
	* pbcjoin.tcl, pbcwrap.tcl, pbcunwrap.tcl, pbcset.tcl, pbcbox.tcl:
	Improved error handling. 

	* pbcwrap.tcl, pbcunwrap.tcl, pbcjoin.tcl: Added -verbose option
	to wrap, unwrap and join. 

	* pbcset.tcl: Added -check option to pbcget: checks the cell
	parameters for validity.
