@@ -1,4 +1,4 @@
-<!--#set var="TITLE" value="PBCTools Plugin, Version 2.3"-->
+<!--#set var="TITLE" value="PBCTools Plugin, Version 2.4"-->
 <!--#include virtual="/Research/vmd/include/header-vmd.shtml"-->
 
 <!-- HTML docs as used on the VMD homepage in
