@@ -1,0 +1,2 @@
+#!/usr/bin/tclsh
+pkg_mkIndex -verbose .
