@@ -1,0 +1,16 @@
+#!/bin/sh
+
+NAME=$1
+
+if [ ! $NAME ]; then
+    echo "Usage: tar_release.sh NAME (e.g. pbctools-2.3)"
+    exit 2;
+fi
+
+if [ ! -d $NAME ]; then
+    echo "Directory $NAME does not exist!"
+    exit 1
+fi
+
+echo "Creating archive $NAME.tar.gz..."
+tar -chzvf $NAME.tar.gz $NAME --exclude=.svn* --exclude=maintainer
